Added players to games and more search abilities.
Game model now has players.  Game schema adapted accordingly.

Game model now contains instead of inherits core Game as method
signatures will change and most methods will need adapting anyway.

Users resouce can now search by game.

Games resource can now search by player.

Core exceptions should now be handled as REST exceptions.

Added missing 400 responses to /games and /users in spec.

Fixed at least one bug and added more typing information.

store now directly handles both actual model objects as well as
timeflakes for input where it makes sense.

Dummy data now includes added players.
